--- a/DesignerRHN/DesignerRHN-war/web/EmplInformacionAdicional.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplInformacionAdicional.xhtml
@@ -87,7 +87,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 400px; margin: -14px; height: 26px; border: none; color: blue" id="fooGrupos"  value=" "/>
+                                        <p:commandButton style="width: 400px; margin: -14px; height: 26px; border: none; color: blue" id="fooGrupos" action="grupoinfadicional" value=" "/>
                                     </f:facet>
                                 </p:column>
 
