--- a/DesignerRHN/DesignerRHN-war/web/EmplVigenciaSueldo.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplVigenciaSueldo.xhtml
@@ -121,7 +121,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 170px; margin: -14px; height: 26px;  border: none; color: blue" id="fooMotivoCambioSueldo" action="motivocambiosueldo" actionListener="#{controlMovitosCambiosSueldos.recibirPaginaEntrante('emplvigenciasueldo')}" value=""/>
+                                        <p:commandButton style="width: 170px; margin: -14px; height: 26px;  border: none; color: blue" id="fooMotivoCambioSueldo" action="motivocambiosueldo" value=""/>
                                     </f:facet>
                                 </p:column>
 
