--- a/DesignerRHN/DesignerRHN-war/web/EmplVigenciaTipoContrato.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplVigenciaTipoContrato.xhtml
@@ -114,7 +114,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 170px; margin: -14px; height: 26px; border: none; color: blue;" id="fooContrato" action="motivocontrato" actionListener="#{controlMotivosContratos.recibirPaginaEntrante('emplvigenciatipocontrato')}" value=" "/>
+                                        <p:commandButton style="width: 170px; margin: -14px; height: 26px; border: none; color: blue;" id="fooContrato" action="motivocontrato" actionListener="#{controlMotivosContratos.recibirPaginaEntrante('atrasmotivocontrato')}" value=" "/>
                                     </f:facet>
                                 </p:column>  
 
