--- a/DesignerRHN/DesignerRHN-war/web/IdiomaPersona.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/IdiomaPersona.xhtml
@@ -48,7 +48,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 400px; margin: -14px; height: 26px; border: none; color: blue" id="fooIdioma"  value=" "/>
+                                        <p:commandButton style="width: 400px; margin: -14px; height: 26px; border: none; color: blue" id="fooIdioma" action="idioma"  value=" "/>
                                     </f:facet>
                                 </p:column>  
 
