--- a/DesignerRHN/DesignerRHN-war/web/cargo.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/cargo.xhtml
@@ -166,7 +166,7 @@
                                         </f:facet>   
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 100px; margin: -14px; height: 26px; border: none; color: blue" id="fooGrupoViatico"  value=" "/>
+                                        <p:commandButton style="width: 100px; margin: -14px; height: 26px; border: none; color: blue" id="fooGrupoViatico" action="grupoviatico"  value=" "/>
                                     </f:facet>
                                 </p:column>
 
