--- a/DesignerRHN/DesignerRHN-war/web/empldemanda.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/empldemanda.xhtml
@@ -134,7 +134,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">   
-                                        <p:commandButton style="width: 400px; margin: -14px; height: 26px; border: none; color: blue" value=" "/>
+                                        <p:commandButton style="width: 400px; margin: -14px; height: 26px; border: none; color: blue" action="motivodemanda" value=" "/>
                                     </f:facet>
                                 </p:column>                               
 
