--- a/DesignerRHN/DesignerRHN-war/web/emplvigenciaformapago.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/emplvigenciaformapago.xhtml
@@ -102,7 +102,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <p:commandButton value="" style="width: 780px; margin: -14px; height: 20px; border: none; color: blue;" id="fooFormaPago"/>
+                                        <p:commandButton value="" style="width: 780px; margin: -14px; height: 20px; border: none; color: blue;"  id="fooFormaPago"/>
                                     </f:facet>
                                 </p:column> 
 
@@ -133,7 +133,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <p:commandButton value="" style="width: 780px; margin: -14px; height: 20px; border: none; color: blue;" id="fooMetodoPago" />
+                                        <p:commandButton value="" style="width: 780px; margin: -14px; height: 20px; border: none; color: blue;" action="metodospagos" id="fooMetodoPago" />
                                     </f:facet>
                                 </p:column> 
 
