--- a/DesignerRHN/DesignerRHN-war/web/liquidarproyeccion.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/liquidarproyeccion.xhtml
@@ -15,9 +15,9 @@
                         <fieldset style="position: absolute; left: 10px; top: 35px;  width: 300px; height: 100px; border-radius: 10px; ">
                             <legend style="font-size: 14px; color: blue"><strong>Opciones</strong></legend>
                             <p:commandButton style="; border-color:#045491; width:300px; border-width: 2px; position: absolute;top: 20px;left: 8px" value="[Indicades de Gestion...]"></p:commandButton>
-                            <p:commandButton style=";border-color:#045491; width:300px; border-width: 2px; position: absolute;top: 60px;left: 8px" value="[Proyecciones y RetroActivos...]"></p:commandButton>
+                            <p:commandButton style=";border-color:#045491; width:300px; border-width: 2px; position: absolute;top: 60px;left: 8px" action="liquidarproyeccion1" value="[Proyecciones y RetroActivos...]"></p:commandButton>
                         </fieldset>
-                        <p:commandButton icon="ui-icon-arrowreturnthick-1-w" style="position: absolute;top: 152px;left: 260px" value="atras" ></p:commandButton>
+                        <p:commandButton icon="ui-icon-arrowreturnthick-1-w" style="position: absolute;top: 152px;left: 260px" action="atrasliquidarproyeccion" value="atras" ></p:commandButton>
                     </p:panel>
                 </h:form>
             </ui:define>
