--- a/DesignerRHN/DesignerRHN-war/web/menucapacitacion.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/menucapacitacion.xhtml
@@ -20,7 +20,7 @@
 
 
                         </fieldset>
-                        <p:commandButton icon="ui-icon-arrowreturnthick-1-w" style="position: absolute;top: 152px;left: 260px" value="atras" ></p:commandButton>
+                        <p:commandButton icon="ui-icon-arrowreturnthick-1-w" style="position: absolute;top: 152px;left: 260px" action="atrasmenucapacitacion" value="atras" ></p:commandButton>
 
                     </p:panel>
                 </h:form>
