--- a/DesignerRHN/DesignerRHN-war/web/EmplVigenciasCargos.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplVigenciasCargos.xhtml
@@ -144,7 +144,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer" >
-                                        <p:commandButton value="" style="width: 170px; margin: -14px; height: 20px; border: none; color: blue" id="fooMotivos" onclick="motivosDialog.show();"/>
+                                        <p:commandButton value="" style="width: 170px; margin: -14px; height: 20px; border: none; color: blue" action="motivocambiocargo" id="fooMotivos" />
                                     </f:facet>
                                 </p:column>
 
