--- a/DesignerRHN/DesignerRHN-war/web/liquidacionlog.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/liquidacionlog.xhtml
@@ -164,7 +164,7 @@
                                 <p:commandButton id="refrescar" value="" disabled="true"  style="background-image: url(Imagenes/refrescar.png); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px " actionListener="#{controlLiquidacionesLogs.cancelarModificacion()}" process="@this"/>  
                                 <p:tooltip  for="refrescar" value="refrescar"/>
 
-                                <p:commandButton id="salir" value="" style="background-image: url(Imagenes/salir.png); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px " actionListener="#{controlLiquidacionesLogs.salir()}"  process="@this"/>  
+                                <p:commandButton id="salir" value="" style="background-image: url(Imagenes/salir.png); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px " actionListener="#{controlLiquidacionesLogs.salir()}" action="atrasliquidacionlog" process="@this"/>  
                                 <p:tooltip  for="salir" value="Salir"/>
 
                             </p:toolbarGroup>  
@@ -172,14 +172,14 @@
 
 
                         <h:outputText id="informacionRegistro" value="#{controlLiquidacionesLogs.infoRegistro}" style="position: absolute; left: 15px; top: 450px; font-weight: bold"/>
-                        <p:commandButton style=" position: absolute; left: 785px; top: 470px; " icon="ui-icon-check" value="Atras" />
+                        <p:commandButton style=" position: absolute; left: 785px; top: 470px; " icon="ui-icon-check" action="atrasliquidacionlog" value="Atras"  />
                         <p:commandButton style=" position: absolute; left: 10px; top: 470px; " icon="ui-icon-arrowreturnthick-1-w" id="BUSCAREMPLEADO" value="Buscar Empleado" actionListener="#{controlLiquidacionesLogs.llamarDialogoEmpleado()}"    />
 
                         <p:dialog id="confirmarGuardar" header="ATENCION...!" widgetVar="confirmarGuardar"  resizable="false" draggable="false" modal="true" height="85" width="425" closable="false">  
                             <h:graphicImage value="Imagenes/alerta.jpg" width="75" height="60" style="position: absolute; left: 30px; top: 10px;"  />
                             <h:outputText value="¿Desea guardar los cambios realizados?" style="position: absolute; left: 120px; top: 20px; width: 250px; font-weight:bold;" />
-                            <p:commandButton value="Si" onclick="confirmarGuardar.hide();" actionListener="#{controlLiquidacionesLogs.borrarLiquidacionesLogsEmpleado()}" style="position: absolute; top: 50px; left: 207px" process="@this" icon="ui-icon-check" />
-                            <p:commandButton value="No" onclick="confirmarGuardar.hide();" actionListener="#{controlLiquidacionesLogs.cancelarModificacion()}" style="position: absolute; top: 50px; left: 258px" process="@this" icon="ui-icon-close" />
+                            <p:commandButton value="Si" action="atrasliquidacionlog" onclick="confirmarGuardar.hide();" actionListener="#{controlLiquidacionesLogs.borrarLiquidacionesLogsEmpleado()}" style="position: absolute; top: 50px; left: 207px" process="@this" icon="ui-icon-check" />
+                            <p:commandButton value="No" action="atrasliquidacionlog" onclick="confirmarGuardar.hide();" actionListener="#{controlLiquidacionesLogs.cancelarModificacion()}" style="position: absolute; top: 50px; left: 258px" process="@this" icon="ui-icon-close" />
                             <p:commandButton value="Cancelar" onclick="confirmarGuardar.hide();" style="position: absolute; top: 50px; left: 315px" process="@this" icon="ui-icon-arrowreturnthick-1-w" />
                         </p:dialog>
 
