--- a/DesignerRHN/DesignerRHN-war/web/liquidarproyeccion1.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/liquidarproyeccion1.xhtml
@@ -63,8 +63,8 @@
                                 <h:outputText style="position: absolute;top: 285px;left: 405px; width: 130px; height: 200px; font-size: 12px  " value="Elimina los resultados de la liquidación y los calculos de retroactivos"/>
                             </fieldset>
                         </fieldset>
-                        <p:commandButton style=" position: absolute; left: 800px; top: 500px; font-size: 10px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-arrowreturnthick-1-w" id="ATRAS" value="Atras"/>
-                        
+                        <p:commandButton style=" position: absolute; left: 800px; top: 500px; " icon="ui-icon-arrowreturnthick-1-w" id="ATRAS" action="atrasliquidarproyeccion1" value="Atras"/>
+
                         <p:dialog header="Tipo Entidad" widgetVar="opciones" draggable="false" resizable="false" closable="false" id="opciones"  
                                   showEffect="fade" hideEffect="fade" width="290" height="170" modal="true" style="font-size: 11px;">
                             <fieldset style="position: absolute; left: 10px; top: 10px; font-size: 10px; width: 250px; height: 140px; border-radius: 10px;" >
